# Civitas

./: .clang-format  .cmake-format.json  .gitignore  .gitmodules  .versionrc.js  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: EnableExtraCompilerWarnings.cmake  GenerateVersionHeader.cmake  GenerateVersionHeader.hpp.in  GetGitRevisionDescription.cmake
src/: CMakeLists.txt  logging.cpp  logging.hpp  main.cpp
